{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 18,
  "lineage": "118c6ea0-7925-fdef-97ab-fae0654eb3ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0066a54be0bcc4fe7",
            "arn": "arn:aws:ec2:us-east-1:482227257362:elastic-ip/eipalloc-0066a54be0bcc4fe7",
            "domain": "vpc",
            "id": "eipalloc-0066a54be0bcc4fe7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-56-177-183.compute-1.amazonaws.com",
            "public_ip": "100.56.177.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:internet-gateway/igw-050a8c06c92eacf8a",
            "id": "igw-050a8c06c92eacf8a",
            "owner_id": "482227257362",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-igw"
            },
            "vpc_id": "vpc-07cce3a962a5199c2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "databricks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0066a54be0bcc4fe7",
            "association_id": "eipassoc-02785ae775b71835d",
            "connectivity_type": "public",
            "id": "nat-0fcd65cc097ac5ea8",
            "network_interface_id": "eni-0ff4ab04481899aa8",
            "private_ip": "10.0.0.111",
            "public_ip": "100.56.177.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000666ea90e8caf69",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-nat"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-nat"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:route-table/rtb-0a9069b268b17d670",
            "id": "rtb-0a9069b268b17d670",
            "owner_id": "482227257362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fcd65cc097ac5ea8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cce3a962a5199c2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:route-table/rtb-0fee6cd00a773c241",
            "id": "rtb-0fee6cd00a773c241",
            "owner_id": "482227257362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050a8c06c92eacf8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cce3a962a5199c2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c680c731f0f4294",
            "route_table_id": "rtb-0a9069b268b17d670",
            "subnet_id": "subnet-064da133b21827cbb"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c25fb17c5096a93",
            "route_table_id": "rtb-0a9069b268b17d670",
            "subnet_id": "subnet-0dbcb20fb037b82a9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0245f3398c6ec52fd",
            "route_table_id": "rtb-0fee6cd00a773c241",
            "subnet_id": "subnet-000666ea90e8caf69"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a9098759717705",
            "route_table_id": "rtb-0fee6cd00a773c241",
            "subnet_id": "subnet-063d6a9e54a20fcd2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databricks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:security-group/sg-02971bbcad6ced69a",
            "description": "Databricks cluster node communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02971bbcad6ced69a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node-to-node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "databricks-dev-sg",
            "name_prefix": "",
            "owner_id": "482227257362",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cce3a962a5199c2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:subnet/subnet-064da133b21827cbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064da133b21827cbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482227257362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-1"
            },
            "vpc_id": "vpc-07cce3a962a5199c2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:subnet/subnet-0dbcb20fb037b82a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbcb20fb037b82a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482227257362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-private-2"
            },
            "vpc_id": "vpc-07cce3a962a5199c2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:subnet/subnet-000666ea90e8caf69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000666ea90e8caf69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482227257362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-1"
            },
            "vpc_id": "vpc-07cce3a962a5199c2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:subnet/subnet-063d6a9e54a20fcd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d6a9e54a20fcd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482227257362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-public-2"
            },
            "vpc_id": "vpc-07cce3a962a5199c2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:vpc/vpc-07cce3a962a5199c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f00d271cf031302b",
            "default_route_table_id": "rtb-0972948bd70b18e70",
            "default_security_group_id": "sg-051a146e6807e33ad",
            "dhcp_options_id": "dopt-0223893eb575b76f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cce3a962a5199c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0972948bd70b18e70",
            "owner_id": "482227257362",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "databricks-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}